--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -905,8 +905,7 @@
             <p class="no-bottom-margin">
               <span
                 >{{
-                  (formCreationService.appTypeInsuranceForm$ | async)?.value
-                    ?.insuranceOption
+                  insuranceOptionName
                 }}</span
               ></p>
           </div>
