phone number website links

--- a/dfa/src/UI/embc-dfa/src/app/core/layout/footer/footer.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
       <div class="row row-align">
         <div class="col-md-4 contact-info">
-          <span>Contact DFA Support toll free at 1-123-456-7890</span>
+          <span>Contact DFA Support toll free at 1-888-257-4777</span>
         </div>
 
         <div class="col-md-6">
@@ -11,9 +11,9 @@
             <li>
               <a
                 class="link"
-                href="https://ess.gov.bc.ca/"
+                href="https://dfa.gov.bc.ca/"
                 target="_blank"
-                title="Goes to ESS Page"
+                title="Goes to DFA Page"
                 >Home</a
               >
             </li>
