--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Do you occupy the damaged property as your principal residence?<span style="color:red" >*</span>
+              Did you occupy the damaged property as your principal residence at the time of the event?<span style="color:red" >*</span>
             </p>
             <mat-radio-group
               formControlName="occupyAsPrimaryResidence"
@@ -51,7 +51,7 @@
               <br/><br/>
             </div>
             <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value == 'false'">
-              You must occupy the property as your principal residence to be eligible for DFA. <br/><br/>
+              You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/><br/>
               You may call us to discuss further at 1-888-257-4777.<br/><br/>
             </div>
           </div>
