--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -26,7 +26,7 @@
                   <div class="row">
                     <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.Homeowner">
                       <br/>
-                      You must occupy the property as your principal residence. Seasonal or recreational properties aren’t eligible. If you are a landlord, you must apply and qualify as a small business owner.
+                      You must have occupied the property as your principal residence at the time of the event. Seasonal or recreational properties aren’t eligible. If you are a landlord, you must apply and qualify as a small business owner.
                       <br/><br/>
                       As a homeowner, you must provide the following with your application:<br/>
                       <ul>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.ResidentialTenant">
                       <br/>
-                      You must occupy the property as your principal residence. Seasonal or recreational properties aren’t eligible.
+                      You must have occupied the property as your principal residence at the time of the event. Seasonal or recreational properties aren’t eligible.
                       <br/><br/>
                       As a Residential Tenant, you must to provide the following with your application:
                       <ul>
