hide go back & edit from damaged property address

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -55,6 +55,7 @@
         <div class="col-md-6" *ngIf="vieworedit !== 'view' && vieworedit !== 'edit'">
           <button
             class="button-s"
+            [hidden]="step.component === 'damaged-property-address'"
             mat-button
             type="button"
             (click)="goBack(dfaApplicationMainStepper, step.lastStep)"
