EMBCDFA-795 : Profile - Postal code should be mandatory on Current Contact Address

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/can-address/can-address.component.html
@@ -92,10 +92,11 @@
           [formControlName]="'postalCode'"
           matInput
           placeholder="Postal Code"
+          required
         />
-        <!-- <mat-error
+         <mat-error
                     *ngIf="addressFormControl?.postalCode.invalid && addressFormControl?.postalCode.hasError('required')">
-                    Postal Code is required</mat-error>-->
+                    Postal Code is required</mat-error>
         <mat-error
           *ngIf="
             addressFormControl?.postalCode.invalid &&
