file upload types, text cleanup

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -1117,7 +1117,7 @@
 
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
-          <div class="col-md-6 card-heading">Damage</div>
+          <div class="col-md-6 card-heading">Cause of Damage</div>
           <div class="col-md-2" *ngIf="allowEdit">
             <button
               class="edit-image"
@@ -1259,7 +1259,7 @@
 
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
-          <div class="col-md-6 card-heading">Occupants</div>
+          <div class="col-md-6 card-heading">Occupants, Secondary Applicants and Contacts</div>
           <div class="col-md-2" *ngIf="allowEdit">
             <button
               class="edit-image"
