--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -278,7 +278,7 @@
           description=" If you have invoices/receipts for cleanup or repairs, please have them available during the site meeting to help the evaluator identify eligible costs. <br />You may also attach them to this application"
           requiredFile="no"
           [allowedFileTypes]="allowedFileTypes"
-          allowedFileExtensionsList=".pdf,.jpg,.jpeg,.png"
+          allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
           fileType="Cleanup"
           excludeFileTypes="[]"
           (saveFileUpload)="saveNewCleanupLogFile($event)"
