--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -51,7 +51,7 @@
                       If you don't have a rental or lease agreement, you may include:
                       <ul>
                         <li>written correspondence from your landlord showing the dates and terms of your tenancy, or</li>
-                        <li>a piece of mail showing you lived in the residence at the time of the event, such as BC Hydro bill, utility bill, bank statement, or vehicle insurance.</li>
+                        <li>a piece of mail addressed to you at the damaged property address which shows that you lived in the residence at the time of the event, such as a BC Hydro bill, utility bill, bank statement, or vehicle insurance.</li>
                       </ul>
                     </div>
                     <!-- <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
@@ -257,9 +257,9 @@
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
                   <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application. If I am later
-                  to have found to have insurance I will be required to repay any financial assistance I've received. <br/><br/>
+                  to have found to have insurance, I will be required to repay any financial assistance I've received. <br/><br/>
                   The Disaster Financial Assistance (DFA) Program operates under provincial legislation: <i>Emergency Program Act</i> and the <i>Compensation and
-                  Disaster Financial Assistance Regulation</i>. Emergency Management BC is obliged to provide DFA in accordance with this legislation. Section 8(1) of the Regulation
+                  Disaster Financial Assistance Regulation</i>. Ministry of Emergency Management and Climate Readiness BC is obliged to provide DFA in accordance with this legislation. Section 8(1) of the Regulation
                   states: “'eligible costs' does not include costs of expenses (a) recoverable at law of for which insurance was reasonably and readily available.”<br/><br/>
                   <b>A DFA applicant who could reasonably and readily have purchased overland flood, water damage or water seepage insurance is NOT eligible to receive DFA.</b><br/><br/>
                   “Readily available” means that a person could obtain this insurance from a local agent or broker. Also, we should not confuse reasonably available with affordable.
