--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -91,7 +91,7 @@
                     class="delete-image"
                     mat-icon-button
                     aria-label="Remove"
-                    (click)="deleteCleanupLogRow(index)"
+                    (click)="confirmDeleteCleanuplogRow(index)"
                   >
                     <img src="/assets/images/delete.svg" height="35" width="35" />
                     <img
