required doc section in review

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -1631,6 +1631,88 @@
 
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
+          <div class="col-md-6 card-heading">Required Documents</div>
+          <div class="col-md-2" *ngIf="allowEdit">
+            <button
+              class="edit-image"
+              mat-icon-button
+              aria-label="Edit"
+              (click)="navigateToStep(5)"
+            >
+              <img src="/assets/images/edit.svg" height="35" width="35" />
+              <img
+                src="/assets/images/edit_onhover.svg"
+                height="35"
+                width="35"
+              />
+            </button>
+          </div>
+        </div>
+        <hr />
+        <div class="row info-detail" *ngIf="requiredDocumentsDataSource?.data?.length > 0">
+          <b>Required Documents</b>
+          <table mat-table [dataSource]="requiredDocumentsDataSource">
+             <!-- File Name Column -->
+             <ng-container matColumnDef="fileName" style="width:25%">
+              <th mat-header-cell *matHeaderCellDef >
+                <b>File Name</b>
+              </th>
+              <td *matCellDef="let element" mat-cell>
+                {{ element.fileName }}
+              </td>
+            </ng-container>
+
+            <!-- Description Column -->
+            <ng-container matColumnDef="fileDescription" style="width:25%">
+              <th mat-header-cell *matHeaderCellDef>
+                <b>File Description</b>
+              </th>
+              <td *matCellDef="let element" mat-cell>
+                {{ element.fileDescription}}
+              </td>
+            </ng-container>
+
+            <!-- Type Column -->
+            <ng-container matColumnDef="fileType" style="width:25%">
+              <th mat-header-cell *matHeaderCellDef>
+                <b>File Type</b>
+              </th>
+              <td *matCellDef="let element" mat-cell>
+                {{ element.fileType}}
+              </td>
+            </ng-container>
+
+            <!-- UploadedDate Column -->
+            <ng-container matColumnDef="uploadedDate" style="width:25%">
+              <th mat-header-cell *matHeaderCellDef>
+                <b>Date Uploaded</b>
+              </th>
+              <td *matCellDef="let element" mat-cell>
+                {{ element.uploadedDate | date:"dd-MMM-yyyy" }}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="requiredDocumentsColumnsToDisplay"></tr>
+            <tr
+              mat-row
+              *matRowDef="let element; columns: requiredDocumentsColumnsToDisplay"
+              class="example-element-row"
+            ></tr>
+          </table>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noInsuranceTemplate')">
+          <span style="color:red">Insurance template is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noRentalAgreement') && isResidentialTenant">
+          <span style="color:red">Rental Agreement is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noIdentification') && isResidentialTenant">
+          <span style="color:red">Identification is required.</span>
+        </div>
+      </mat-card-content>
+
+      <mat-card-content class="contentStyle mat-elevation-z8">
+        <div class="row justify-content-between">
           <div class="col-md-6 card-heading">Supporting Documents</div>
           <div class="col-md-2" *ngIf="allowEdit">
             <button
@@ -1650,7 +1732,7 @@
         </div>
         <hr />
         <div class="row info-detail" *ngIf="supportingDocumentsDataSource?.data?.length > 0">
-          <b>Supporting Documents & Insurance Template</b>
+          <b>Supporting Documents</b>
           <table mat-table [dataSource]="supportingDocumentsDataSource">
              <!-- File Name Column -->
              <ng-container matColumnDef="fileName" style="width:25%">
@@ -1702,15 +1784,6 @@
         </div>
         <div class="row info-detail" *ngIf="supportingDocumentsDataSource?.data?.length == 0">
           <span>No supporting documents.</span>
-        </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noInsuranceTemplate')">
-          <span style="color:red">Insurance template is required.</span>
-        </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noRentalAgreement') && isResidentialTenant">
-          <span style="color:red">Rental Agreement is required.</span>
-        </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noIdentification') && isResidentialTenant">
-          <span style="color:red">Identification is required.</span>
         </div>
       </mat-card-content>
     </div>
