--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -87,8 +87,8 @@
           </button>
         </div>
         <br/>
-        ** You do not have to complete the entire application at once, you can udpate it from the dashboard as needed.  However, before you
-        submit the final signed version, all fields with a red * must be completed.
+        <label>** You do not have to complete the entire application at once, you can udpate it from the dashboard as needed.  However, before you
+        submit the final signed version, all fields marked with a <b><span style="color:red;">*</span></b> must be completed.</label>
       </div>
     </mat-step>
     <mat-step *ngIf="currentFlow === 'verified-registration' && vieworedit !== 'view' && vieworedit !== 'edit'">
