--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.scss
@@ -16,3 +16,10 @@ mat-form-field {
     font-weight: 700;
     color: #169bd5;
 }
+
+.addressMessage {
+  border: 2px solid lightgrey;
+  font-weight: bold;
+  color: #169bd5;
+  padding: 10px;
+}
