--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-align" [ngStyle]="{'pointer-events': vieworedit === 'view' || vieworedit === 'edit' ? 'none' : ''}" style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align" [ngStyle]="{'pointer-events': dfaApplicationMainDataService.getViewOrEdit() === 'view' || dfaApplicationMainDataService.getViewOrEdit() === 'edit' ? 'none' : ''}" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
     <form [formGroup]="signAndSubmitForm">
@@ -25,7 +25,7 @@
 
       </ng-container>
     </form>
-    <div *ngIf="dfaApplicationMainDataService.isSubmitted == true || vieworedit === 'view'">
+    <div *ngIf="dfaApplicationMainDataService.isSubmitted == true || dfaApplicationMainDataService.getViewOrEdit() === 'view'">
       Your application has been submitted.<br/><br/>
 
       You may view the status of your application on your dashboard and a copy has been emailed to you at the email address provided.
