email address from bcsc only

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -139,6 +139,7 @@ information and to verify that the information provided by you is accurate.
                 formControlName="email"
                 matInput
                 placeholder="Email Address"
+                autocomplete="new-password"
                 required
                 [readonly]="contactFormControl.confirmEmail.value"
               />
